--- a/SqlDataCompare.Core/SqlDataCompare.Core.csproj
+++ b/SqlDataCompare.Core/SqlDataCompare.Core.csproj
@@ -46,9 +46,9 @@
     <Compile Include="ConnectToServer\DetailsToConnect.cs" />
     <Compile Include="ConnectToServer\ISqlConnection.cs" />
     <Compile Include="ConnectToServer\SqlServerConnection.cs" />
-    <Compile Include="DataBase\IDatabaseProvider.cs" />
+    <Compile Include="DataBase\IDatabaseMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataBase\DataBaseProvider.cs" />
+    <Compile Include="DataBase\DatabaseMetadata.cs" />
     <Compile Include="Select\SelectManager.cs" />
   </ItemGroup>
   <ItemGroup />
